--- a/content/_assets/tables/animatingsladearchive-fig38.html
+++ b/content/_assets/tables/animatingsladearchive-fig38.html
@@ -1,1 +1,1 @@
-<iframe src="https://archive.org/embed/b32723647" width="100%" height="100%" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
+<iframe src="https://drive.google.com/file/d/13GsDptAN1Aft1lt3iFp3Ru8i8QxDerbu/preview" width="100%" height="100%" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
