--- a/content/_assets/tables/animatingsladearchive-fig65.html
+++ b/content/_assets/tables/animatingsladearchive-fig65.html
@@ -1,1 +1,1 @@
-<iframe src="https://archive.org/embed/b32723647" width="100%" height="100%" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
+<iframe src="https://drive.google.com/file/d/1W-g70uMfk84y-Y0huyR0aV8eyUfqYO0B/preview" width="100%" height="100%" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
