--- a/content/_assets/tables/animatingsladearchive-fig94.html
+++ b/content/_assets/tables/animatingsladearchive-fig94.html
@@ -1,1 +1,1 @@
-<iframe src="https://archive.org/embed/b32723647" width="100%" height="100%" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
+<iframe src="https://drive.google.com/file/d/1R-UsHeSeQruoTqFL6u8MBBaAo3H8KpRJ/preview" width="100%" height="100%" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
